# sony_recognizer

./: .dockerignore  .env.example  .env.production.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.obsidian/: workspace.json
apps/ingest/: Dockerfile  package.json
apps/ingest/src/: auth.ts  ftp.ts  index.ts  process.ts  queue.ts  reconciler.ts  s3.ts
apps/web/: Dockerfile  next.config.ts  package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: AppHeader.tsx  CameraPanel.tsx  CreateEventForm.tsx  EventControls.tsx  EventLiveView.tsx  EventLogPanel.tsx  FtpCredentialPanel.tsx  PhotoArchive.tsx  ProfileMenu.tsx  QrPanel.tsx  SignOutButton.tsx  SiteFooter.tsx  UploadPanel.tsx
apps/web/src/lib/: auth-client.ts  auth.ts  queue.ts  s3.ts  session.ts
apps/worker/: Dockerfile  README.md  pyproject.toml
apps/worker/src/sr_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/worker/src/worker/: contracts.py  db.py  enroll.py  main.py  matching.py  pipeline.py  settings.py  storage.py
docker/: Caddyfile  docker-compose.dev.yml  docker-compose.prod.yml
docs/design/: 01-requirements-and-risks.md  02-architecture.md  03-ai-pipeline.md  04-database.md  05-api.md  06-security-privacy.md  07-milestones.md  README.md
docs/setup/: deploy-truenas.md  deploy-vps.md  m1-camera-test.md  m2-attendee-test.md
(+35 files in other folders)
